force-app/main/default/objects/NEO_KycDetail__c/NEO_KycDetail__c.object-meta.xml
<CustomObject>
    <description>Contains the KYC Details of employees.</description>
    <label>KycDetail</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KycDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>