force-app/main/default/objects/NEO_KycDetail__c/fields/NEO_documentNumber__c.field-meta.xml
<CustomField>
    <fullName>documentNumber__c</fullName>
    <label>documentNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>