force-app/main/default/objects/NEO_KycDetail__c/fields/NEO_documentType__c.field-meta.xml
<CustomField>
    <fullName>documentType__c</fullName>
    <label>documentType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Account (ICICI)</fullName>
            </value>
            <value>
                <fullName>Aadhar Card</fullName>
            </value>
            <value>
                <fullName>Pan Card</fullName>
            </value>
            <value>
                <fullName>Voter Card</fullName>
            </value>
            <value>
                <fullName>ESIC Card</fullName>
            </value>
            <value>
                <fullName>Ration Card</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>UAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>