force-app/main/default/objects/NEO_KycDetail__c/fields/NEO_expDate__c.field-meta.xml
<CustomField>
    <fullName>expDate__c</fullName>
    <label>expDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>