force-app/main/default/objects/NEO_KycDetail__c/fields/NEO_ifscCode__c.field-meta.xml
<CustomField>
    <fullName>ifscCode__c</fullName>
    <label>ifscCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>