force-app/main/default/objects/NEO_KycDetail__c/fields/NEO_KycToEmp__c.field-meta.xml
<CustomField>
    <fullName>KycToEmp__c</fullName>
    <label>KycToEmp</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>KycDetails</relationshipLabel>
    <relationshipName>KycToEmp</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>