force-app/main/default/objects/NEO_KycDetail__c/fields/NEO_nameOnDocument__c.field-meta.xml
<CustomField>
    <fullName>nameOnDocument__c</fullName>
    <label>nameOnDocument</label>
    <length>100</length>
    <type>Text</type>
</CustomField>