force-app/main/default/objects/NEO_KycDetail__c/fields/NEO_remarks__c.field-meta.xml
<CustomField>
    <fullName>remarks__c</fullName>
    <label>remarks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>